# kinematic

./: .gitignore  CMakeLists.txt  build.sh  data.csv  kinematic.c  main  main.c  window.c
libs/SDL2/lib/pkgconfig/: sdl2.pc
libs/SDL2_ttf/lib/cmake/SDL2_ttf/: sdl2_ttf-config.cmake
libs/SDL2_ttf/lib/pkgconfig/: SDL2_ttf.pc
src/: InitializePath.cpp  InitializePath.h  main.c  main.cpp  program
